[package]
name = "yew-md"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Yew library for markdown parsing"
categories = ["yew", "markdown"]
repository = "https://github.com/hamza1311/yew-md"

[dependencies]
pulldown-cmark = "0.8"
yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
js-sys = "0.3"
weblog = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCollection",
]
